@@ -12,7 +12,6 @@
     <artifactId>scrapper</artifactId>
     <version>${revision}</version>
 
-
     <dependencies>
         <!-- Web -->
         <dependency>
@@ -130,20 +129,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>postgresql</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>kafka</artifactId>
             <scope>test</scope>
@@ -173,6 +158,22 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>jdbc</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -205,15 +206,18 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
-<<<<<<< hw6
+            <!--mark generated sources as source root-->
             <plugin>
-<!--                mark generated sources as source root-->
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>${build-maven-helper.version}</version>
@@ -226,7 +230,7 @@
                     </execution>
                 </executions>
             </plugin>
-<!--            create pgsql containter for migrations-->
+            <!--create pgsql containter for migrations-->
             <plugin>
                 <groupId>org.codehaus.gmaven</groupId>
                 <artifactId>groovy-maven-plugin</artifactId>
@@ -244,9 +248,7 @@
                                     .withUsername("${db.username}")
                                     .withDatabaseName("postgres")
                                     .withPassword("${db.password}");
-
                                 db.start();
-
                                 project.properties.setProperty('db.url', db.getJdbcUrl());
                                 java.lang.System.out.println("url = " + db.getJdbcUrl());
                                 project.properties.setProperty('testcontainer.containerid', db.getContainerId());
@@ -272,7 +274,6 @@
                         </configuration>
                     </execution>
                 </executions>
-
                 <dependencies>
                     <dependency>
                         <groupId>org.testcontainers</groupId>
@@ -281,7 +282,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
-<!--            run migrations -->
+            <!--run migrations -->
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
@@ -301,7 +302,7 @@
                     <password>${db.password}</password>
                 </configuration>
             </plugin>
-<!--            generate code with jooq-->
+            <!--generate code with jooq-->
             <plugin>
                 <groupId>org.jooq</groupId>
                 <artifactId>jooq-codegen-maven</artifactId>
@@ -336,130 +337,6 @@
                     </execution>
                 </executions>
             </plugin>
-=======
-            <!--                mark generated sources as source root-->
-            <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <version>${build-maven-helper.version}</version>
-            <executions>
-                <execution>
-                    <goals><goal>add-source</goal></goals>
-                    <configuration>
-                        <sources><source>${project.build.directory}/generated-sources</source></sources>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-        <!--            create pgsql containter for migrations-->
-        <plugin>
-            <groupId>org.codehaus.gmaven</groupId>
-            <artifactId>groovy-maven-plugin</artifactId>
-            <version>2.1.1</version>
-            <executions>
-                <execution>
-                    <phase>generate-sources</phase>
-                    <goals>
-                        <goal>execute</goal>
-                    </goals>
-                    <configuration>
-                        <source>
-                            db = new org.testcontainers.containers.PostgreSQLContainer(
-                            "postgres:latest")
-                            .withUsername("${db.username}")
-                            .withDatabaseName("postgres")
-                            .withPassword("${db.password}");
-                            db.start();
-                            project.properties.setProperty('db.url', db.getJdbcUrl());
-                            java.lang.System.out.println("url = " + db.getJdbcUrl());
-                            project.properties.setProperty('testcontainer.containerid', db.getContainerId());
-                            project.properties.setProperty('testcontainer.imageName', db.getDockerImageName());
-                        </source>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>testcontainer-stop</id>
-                    <phase>test</phase>
-                    <goals>
-                        <goal>execute</goal>
-                    </goals>
-                    <configuration>
-                        <source>
-                            containerId = "${testcontainer.containerid}"
-                            imageName = "${testcontainer.imageName}"
-                            println("Stopping testcontainer $containerId - $imageName")
-                            org.testcontainers.utility.ResourceReaper
-                            .instance()
-                            .stopAndRemoveContainer(containerId, imageName);
-                        </source>
-                    </configuration>
-                </execution>
-            </executions>
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.testcontainers</groupId>
-                    <artifactId>postgresql</artifactId>
-                    <version>1.15.2</version>
-                </dependency>
-            </dependencies>
-        </plugin>
-        <!--            run migrations -->
-        <plugin>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-maven-plugin</artifactId>
-            <version>4.27.0</version>
-            <executions>
-                <execution>
-                    <phase>generate-sources</phase>
-                    <goals>
-                        <goal>update</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <changeLogFile>../migrations/master.yaml</changeLogFile>
-                <url>${db.url}</url>
-                <username>${db.username}</username>
-                <password>${db.password}</password>
-            </configuration>
-        </plugin>
-        <!--            generate code with jooq-->
-        <plugin>
-            <groupId>org.jooq</groupId>
-            <artifactId>jooq-codegen-maven</artifactId>
-            <version>${jooq.version}</version>
-            <executions>
-                <execution>
-                    <id>java-generator</id>
-                    <phase>generate-sources</phase>
-                    <goals>
-                        <goal>generate</goal>
-                    </goals>
-
-                    <configuration>
-                        <jdbc>
-                            <url>${db.url}</url>
-                            <user>${db.username}</user>
-                            <password>${db.password}</password>
-                        </jdbc>
-                        <generator>
-                            <database>
-                                <name>
-                                    org.jooq.meta.postgres.PostgresDatabase
-                                </name>
-                                <inputSchema>public</inputSchema>
-                            </database>
-                            <target>
-                                <packageName>edu.java.scrapper.domain.jooq</packageName>
-                                <directory>${project.build.directory}/generated-sources/jooq</directory>
-                            </target>
-                        </generator>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
->>>>>>> master
         </plugins>
     </build>
 </project>
